--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Gitの勉強</title>
   </head>
   <body>
-    <h1>Gitのブランチを勉強しています。</h1>
+    <h1>Gitのブランチを勉強しています。
+    <p>この変更はgh-pagesで追加しました。</p>  
+    </h1>
   </body>
 </html>
